# type-level-logic-rs

./: Cargo.toml  README.md
src/: lib.rs
src/strong/: balanced.rs  boolean.rs  mod.rs  ternary.rs
src/strong/number/: balanced.rs  ternary.rs
src/types/: balanced.rs  boolean.rs  mod.rs  ternary.rs
src/types/number/: balanced.rs  binary.rs  mod.rs  ternary.rs  unary.rs
src/weak/: mod.rs
src/weak/number/: balanced.rs  mod.rs  ternary.rs
