[package]
name = "type-level-logic"
version = "0.1.0"
authors = ["Sean Leffler <sean@errno.com>"]

description = "Primitive types and operations for type-level logic."

documentation = "https://docs.rs/type-level-logic"
homepage = "https://github.com/sdleffler/type-level-logic-rs"
repository = "https://github.com/sdleffler/type-level-logic-rs"

readme = "README.md"

keywords = ["type", "type-level", "logic", "nat", "int"]

license = "MIT/Apache-2.0"

[dependencies]
type-operators = "0.3.4"

[features]
default = []
specialization = ["type-operators/specialization"]

nightly = ["specialization"]
